--- a/app/src/main/res/layout/activity_nb.xml
+++ b/app/src/main/res/layout/activity_nb.xml
@@ -64,7 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number"
+                android:inputType="text"
                 android:text="12" />
 
             <EditText
@@ -73,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number"
+                android:inputType="text"
                 android:text="25" />
 
             <EditText
@@ -82,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="number"
+                android:inputType="text"
                 android:text="2018" />
         </LinearLayout>
 
