--- a/app/src/main/res/layout/activity_run_nfl_api.xml
+++ b/app/src/main/res/layout/activity_run_nfl_api.xml
@@ -9,7 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,32 +26,55 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/nfl_api_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="NFL"
-            android:textSize="36sp" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/nfl_api_month"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textSize="36sp" />
+            <TextView
+                android:id="@+id/nfl_home_team"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="30sp" />
 
-        <TextView
-            android:id="@+id/nfl_api_day"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textSize="36sp" />
+            <TextView
+                android:id="@+id/nfl_home_score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="30sp" />
 
-        <TextView
-            android:id="@+id/nfl_api_year"
+        </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="191dp" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textSize="36sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/nfl_away_team"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/nfl_away_score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="30sp" />
+
+        </LinearLayout>
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
